--- a/apps/visgeo/SConscript
+++ b/apps/visgeo/SConscript
@@ -2,7 +2,8 @@
 
 source_list = ["main.cpp",
                "mainframe.cpp",
-               "glcanvas.cpp"
+               "glcanvas.cpp",
+               "canvas.cpp"
                ]
 # source_list = ["wxauitest.cpp",
 #                "manager.cpp"
@@ -74,7 +75,13 @@ elif platform == "linux":
         linux.Append(CPPFLAGS = "`wx-config --cxxflags` -g -Wall ")
     elif debug==0:
         linux.Append(CPPFLAGS = "`wx-config --cxxflags` -O2 ")
+    linux.Append(CPPPATH = "/usr/local/OpenCV-2.1.0/include")
+    linux.Append(CPPPATH = "/usr/local/include")
     linux.Append(LINKFLAGS = "`wx-config --libs gl,core,base,aui`")
+    linux.Append(LINKFLAGS = "-L/usr/local/OpenCV-2.1.0/build-linux/lib")
+    linux.Append(LINKFLAGS = "-L/usr/local/lib")
+    linux.Append(LIBS = ["cxcore", "cv", "cvaux", "highgui"])
+    linux.Append(RPATH = ".")
     linux.Replace(OBJPREFIX = ".obj/linux/")
 
     linux.Program("visgeo", source_list)
