* improving inpainting dialog for showing images with `wxFrame`, currently `wxDialog` is used for testing ..

--- a/apps/visgeo/SConscript
+++ b/apps/visgeo/SConscript
@@ -2,8 +2,10 @@
 
 source_list = ["main.cpp",
                "mainwindow.cpp",
-               # "mainframe.cpp",
+               "mainframe.cpp",
                "glcanvas.cpp",
+               "abstractcanvas.cpp",
+               "abstractimageeditdlg.cpp",
                "canvas.cpp"
                ]
 # source_list = ["wxauitest.cpp",
